--- a/g.html
+++ b/g.html
@@ -3,297 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond Calculator</title>
+    <title>Bond and Loan Calculator</title>
+    
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Custom Styling */
-        body {
-            background-color: #f5f7fa;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .calculator-card {
-            background-color: #ffffff;
-            border-radius: 10px;
-            padding: 2rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 1rem;
-        }
-        .form-label {
-            font-weight: 500;
-        }
-        .btn-primary {
-            background-color: #000;
-            border-color: #000;
-            transition: background-color 0.3s ease-in-out;
-        }
-        .btn-primary:hover {
-            background-color: #333;
-        }
-        .btn-outline-primary {
-            border-color: #000;
-            color: #000;
-        }
-        .btn-outline-primary:hover {
-            background-color: #000;
-            color: #fff;
-        }
-        .navbar {
-            background-color: #ffffff;
-            padding: 1rem;
-        }
-        .navbar-brand img {
-            height: 40px;
-        }
-        .navbar-toggler {
-            border: none;
-        }
-        .navbar-toggler-icon {
-            background-color: #000;
-            display: block;
-            width: 25px;
-            height: 2px;
-            margin: 5px 0;
-            transition: transform 0.4s;
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(3) {
-            transform: rotate(-45deg) translate(5px, -5px);
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(2) {
-            opacity: 0;
-        }
-        .form-spacing {
-            margin-bottom: 1.5rem;
-        }
-        footer {
-            background-color: #f8f9fa;
-            padding: 1rem 0;
-            text-align: center;
-            margin-top: 2rem;
-        }
-
-        /* Validation Styles */
-        .form-control.invalid {
-            border-color: red;
-            padding-right: 2.5rem;
-            position: relative;
-        }
-        .form-control.invalid ~ .input-icon {
-            display: block;
-            color: red;
-        }
-        .form-control.valid {
-            border-color: green;
-            padding-right: 2.5rem;
-        }
-        .input-icon {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            display: none;
-        }
-        .input-icon.success {
-            color: green;
-        }
-        .error-message {
-            color: red;
-            font-size: 0.875em;
-            margin-top: 0.25rem;
-        }
-    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/bond.css">
+    <link rel="stylesheet" href="assets/css/calculator.css">
 </head>
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">
-            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
-        </a>
-        <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
+        <div class="container-fluid d-flex justify-content-between align-items-center">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" alt="Logo">
+            </a>
+            <h1 class="mx-auto">Safe Bank Plc</h1>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+
+        <!-- Centered Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav mx-auto text-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Loans</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="calculator-card">
-                    <h2 class="mb-4">Loan details</h2>
-                    <!-- Bond Calculator Form -->
-                    <form id="bondForm" class="mt-4">
-                        <div class="mb-3 form-spacing position-relative">
-                            <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
-                            <input type="tel" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
-                            <span class="input-icon">!</span>
-                            <div class="error-message" id="faceValueError"></div>
-                        </div>
+    <!-- Calculator Form -->
+    <div class="container mt-5">
+        <div class="calculator-container">
+            <h2>Choose Calculator</h2>
+            <select id="calculatorType" class="form-select mb-4" aria-label="Calculator Type">
+                <option value="bond">Bond Calculator</option>
+                <option value="loan">Loan Calculator</option>
+            </select>
 
-                        <div class="mb-3 form-spacing position-relative">
-                            <label for="couponRate" class="form-label">Coupon Rate (%)</label>
-                            <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
-                            <span class="input-icon">!</span>
-                            <div class="error-message" id="couponRateError"></div>
-                        </div>
-
-                        <div class="mb-3 form-spacing position-relative">
-                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
-                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
-                            <span class="input-icon">!</span>
-                            <div class="error-message" id="yearsToMaturityError"></div>
-                        </div>
-
-                        <div class="mb-3 form-spacing position-relative">
-                            <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
-                            <select class="form-select" id="paymentFrequency" required>
-                                <option value="">Choose...</option>
-                                <option value="1">Annually</option>
-                                <option value="2">Semi-Annually</option>
-                                <option value="4">Quarterly</option>
-                            </select>
-                            <span class="input-icon">!</span>
-                            <div class="error-message" id="paymentFrequencyError"></div>
-                        </div>
-
-                        <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="" id="initiationFee">
-                            <label class="form-check-label" for="initiationFee">
-                                Include initiation fee in your bond?
-                            </label>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary w-100">Calculate</button>
-                        <button type="reset" class="btn btn-outline-primary w-100 mt-2">Clear</button>
-                    </form>
+            <!-- Bond Calculator Form -->
+            <form id="bondCalculator" class="calculator-form">
+                <div class="mb-3">
+                    <label for="bondAmount" class="form-label">Bond Amount</label>
+                    <input type="text" id="bondAmount" class="form-control amount-input" required>
                 </div>
-            </div>
+                <div class="mb-3">
+                    <label for="interestRate" class="form-label">Interest Rate (%)</label>
+                    <input type="number" id="interestRate" step="0.01" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="years" class="form-label">Years</label>
+                    <input type="number" id="years" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="interestFrequency" class="form-label">Interest Payment Frequency</label>
+                    <select id="interestFrequency" class="form-select" required>
+                        <option value="monthly">Monthly</option>
+                        <option value="quarterly">Quarterly</option>
+                        <option value="semi-annually">Semi-Annually</option>
+                        <option value="yearly">Yearly</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-dark w-100">Calculate Bond</button>
+            </form>
+
+            <!-- Loan Calculator Form (Initially hidden) -->
+            <form id="loanCalculator" class="calculator-form d-none">
+                <div class="mb-3">
+                    <label for="loanAmount" class="form-label">Loan Amount</label>
+                    <input type="text" id="loanAmount" class="form-control amount-input" required>
+                </div>
+                <div class="mb-3">
+                    <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
+                    <input type="number" id="loanInterestRate" step="0.01" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="loanYears" class="form-label">Loan Term (Years)</label>
+                    <input type="number" id="loanYears" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-dark w-100">Calculate Loan</button>
+            </form>
         </div>
     </div>
 
-    <!-- Result Modal -->
+    <!-- Modal for Result Display -->
     <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div id="calculationResults"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="modalResult">
+            <!-- Results will be displayed here -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>Bond Calculator &copy; 2024</p>
+        <div class="container text-center">
+            <p class="mb-0 small">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+        </div>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom Script -->
-    <script>
-        // Animate Hamburger Menu
-        const toggler = document.querySelector('.navbar-toggler');
-        toggler.addEventListener('click', () => {
-            toggler.classList.toggle('collapsed');
-        });
-
-        // Format input with commas as the user types in the face value field
-        const faceValueInput = document.getElementById('faceValue');
-        faceValueInput.addEventListener('input', function() {
-            let value = this.value.replace(/,/g, '');
-            this.value = new Intl.NumberFormat().format(value);
-        });
-
-        // Form validation and styling
-        document.getElementById('bondForm').addEventListener('submit', function (event) {
-            event.preventDefault();
-            if (validateForm()) {
-                calculateBondPrice();
-            }
-        });
-
-        function validateForm() {
-            const formFields = document.querySelectorAll('#bondForm .form-control, #bondForm .form-select');
-            let isValid = true;
-
-            formFields.forEach(field => {
-                const icon = field.nextElementSibling;
-                const errorMsg = field.nextElementSibling.nextElementSibling;
-
-                if (field.value.trim() === '') {
-                    field.classList.add('invalid');
-                    field.classList.remove('valid');
-                    icon.classList.remove('success');
-                    errorMsg.textContent = 'This field is required.';
-                    isValid = false;
-                } else {
-                    field.classList.add('valid');
-                    field.classList.remove('invalid');
-                    icon.classList.add('success');
-                    errorMsg.textContent = ''; // Clear error message
-                }
-            });
-
-            return isValid;
-        }
-
-        function calculateBondPrice() {
-            const faceValue = parseFloat(faceValueInput.value.replace(/,/g, ''));
-            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
-            const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
-
-            // Calculate bond price (simplified formula)
-            const couponPayment = faceValue * couponRate / paymentFrequency;
-            const totalPayments = yearsToMaturity * paymentFrequency;
-            let bondPrice = 0;
-
-            for (let i = 1; i <= totalPayments; i++) {
-                bondPrice += couponPayment / Math.pow(1 + couponRate / paymentFrequency, i);
-            }
-
-            bondPrice += faceValue / Math.pow(1 + couponRate / paymentFrequency, totalPayments);
-
-            // Additional calculations
-            const totalCouponPayments = couponPayment * totalPayments;
-            const totalReceived = bondPrice + totalCouponPayments;
-            const npv = bondPrice; // For simplicity, we're treating the bond price as NPV here
-            const totalInterestEarned = totalCouponPayments - bondPrice; // Total interest earned
-
-            // Display results in modal
-            const resultsHtml = `
-                <p><strong>Calculated Bond Price:</strong> TZS ${bondPrice.toFixed(2)}</p>
-                <p><strong>Total Coupon Payments:</strong> TZS ${totalCouponPayments.toFixed(2)}</p>
-                <p><strong>Total Amount Received:</strong> TZS ${totalReceived.toFixed(2)}</p>
-                <p><strong>Net Present Value (NPV):</strong> TZS ${npv.toFixed(2)}</p>
-                <p><strong>Total Interest Earned:</strong> TZS ${totalInterestEarned.toFixed(2)}</p>
-            `;
-            
-            document.getElementById('calculationResults').innerHTML = resultsHtml;
-            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
-            resultModal.show();
-        }
-
-        // Real-time validation on input
-        const formFields = document.querySelectorAll('#bondForm .form-control, #bondForm .form-select');
-        formFields.forEach(field => {
-            field.addEventListener('input', () => {
-                validateForm();
-            });
-        });
-    </script>
+    <!-- Custom JS -->
+    <script src="assets/js/bond.js"></script>
+    <script src="assets/js/calculator.js"></script>
 
 </body>
 </html>
