--- a/bond.html
+++ b/bond.html
@@ -47,69 +47,91 @@
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container mt-5">
-        <div class="calculator-container">
-            <h2>Choose Calculator</h2>
-            <select id="calculatorType" class="form-select mb-4" aria-label="Calculator Type">
-                <option value="bond">Bond Calculator</option>
-                <option value="loan">Loan Calculator</option>
-            </select>
+        <!-- Calculator Form -->
+    <div class="container calculator-container mt-5 mb-5">
+        <!-- Form for selecting between calculators -->
+        <form id="calculatorForm" class="calculator-form">
+            <div class="form-group mb-4">
+                <label for="calculatorType">Select Calculator</label>
+                <select class="form-control" id="calculatorType">
+                    <option value="bond">Bond Calculator</option>
+                    <option value="loan">Loan Calculator</option>
+                </select>
+            </div>
+            
+            <!-- Bond Calculator Fields -->
+            <div id="bondCalculatorFields">
+                <h4 class="mt-4">Bond Calculator</h4>
+                <div class="form-group mb-3">
+                    <label for="bondAmount">Bond Amount (TZS)</label>
+                    <input type="tel" class="form-control" id="bondAmount" placeholder="Enter Bond Amount">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="bondInterestRate">Interest Rate (%)</label>
+                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Enter Interest Rate">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="bondYears">Years</label>
+                    <input type="tel" class="form-control" id="bondYears" placeholder="Enter Duration (Years)">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="bondFrequency">Interest Paid</label>
+                    <select class="form-control" id="bondFrequency">
+                        <option value="monthly">Monthly</option>
+                        <option value="quarterly">Quarterly</option>
+                        <option value="semi-annually">Semi-annually</option>
+                        <option value="yearly">Yearly</option>
+                    </select>
+                </div>
+            </div>
 
-            <!-- Bond Calculator Form -->
-            <form id="bondCalculator" class="calculator-form">
-                <div class="mb-3">
-                    <label for="bondAmount" class="form-label">Bond Amount</label>
-                    <input type="number" id="bondAmount" class="form-control" required>
+            <!-- Loan Calculator Fields (hidden by default) -->
+            <div id="loanCalculatorFields" style="display: none;">
+                <h4 class="mt-4">Loan Calculator</h4>
+                <div class="form-group mb-3">
+                    <label for="loanAmount">Loan Amount (TZS)</label>
+                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter Loan Amount">
                 </div>
-                <div class="mb-3">
-                    <label for="interestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="interestRate" class="form-control" required>
+                <div class="form-group mb-3">
+                    <label for="loanInterestRate">Interest Rate (%)</label>
+                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
                 </div>
-                <div class="mb-3">
-                    <label for="years" class="form-label">Years</label>
-                    <input type="number" id="years" class="form-control" required>
+                <div class="form-group mb-3">
+                    <label for="loanYears">Years</label>
+                    <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration (Years)">
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Calculate Bond</button>
-                <div id="bondResult" class="mt-3"></div>
-            </form>
+            </div>
 
-            <!-- Loan Calculator Form (Initially hidden) -->
-            <form id="loanCalculator" class="calculator-form d-none">
-                <div class="mb-3">
-                    <label for="loanAmount" class="form-label">Loan Amount</label>
-                    <input type="number" id="loanAmount" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="loanInterestRate" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="loanYears" class="form-label">Loan Term (Years)</label>
-                    <input type="number" id="loanYears" class="form-control" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Calculate Loan</button>
-                <div id="loanResult" class="mt-3"></div>
-            </form>
-        </div>
+            <!-- Buttons -->
+            <div class="button-group mt-4">
+                <button type="submit" class="btn btn-dark w-100">Calculate</button>
+                <button type="button" class="btn btn-light w-100 mt-3" id="clearFormBtn">Clear</button>
+            </div>
+        </form>
     </div>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <div class="social-icons">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-twitter"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                    </div>
+        <p>Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+    </footer>
+
+    <!-- Modal for displaying results -->
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modalResult">
+                    <!-- Calculation results will be displayed here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
-            <hr class="my-4">
-            <p class="mb-0">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
         </div>
-    </footer>
+    </div>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
