--- a/login.html
+++ b/login.html
@@ -3,39 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form with Bootstrap Validation</title>
+  <title>Form Types in Bootstrap 5</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container mt-5">
-    <h2>Login Form</h2>
+    <h2>Different Form Types</h2>
     <form class="needs-validation" novalidate>
-      <!-- Username Field -->
+
+      <!-- Text Input -->
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
         <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
-        <div class="valid-feedback">
-          Username looks good!
-        </div>
-        <div class="invalid-feedback">
-          Please enter your username.
-        </div>
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please enter a username.</div>
       </div>
 
-      <!-- Password Field -->
+      <!-- Password Input -->
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
-        <div class="valid-feedback">
-          Password is valid!
+        <div class="valid-feedback">Password is valid!</div>
+        <div class="invalid-feedback">Please enter a password.</div>
+      </div>
+
+      <!-- Email Input -->
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+        <div class="valid-feedback">Email looks good!</div>
+        <div class="invalid-feedback">Please enter a valid email address.</div>
+      </div>
+
+      <!-- Select Dropdown -->
+      <div class="mb-3">
+        <label for="userRole" class="form-label">User Role</label>
+        <select class="form-select" id="userRole" required>
+          <option selected disabled value="">Choose...</option>
+          <option value="admin">Admin</option>
+          <option value="user">User</option>
+          <option value="guest">Guest</option>
+        </select>
+        <div class="valid-feedback">Role selected!</div>
+        <div class="invalid-feedback">Please select a user role.</div>
+      </div>
+
+      <!-- Radio Buttons -->
+      <div class="mb-3">
+        <label class="form-label">Gender</label><br>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="gender" id="male" value="male" required>
+          <label class="form-check-label" for="male">Male</label>
         </div>
-        <div class="invalid-feedback">
-          Please enter your password.
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="gender" id="female" value="female" required>
+          <label class="form-check-label" for="female">Female</label>
+        </div>
+        <div class="invalid-feedback">Please select your gender.</div>
+      </div>
+
+      <!-- Checkboxes -->
+      <div class="mb-3">
+        <label class="form-label">Interests</label><br>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="coding" value="coding">
+          <label class="form-check-label" for="coding">Coding</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="music" value="music">
+          <label class="form-check-label" for="music">Music</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="sports" value="sports">
+          <label class="form-check-label" for="sports">Sports</label>
         </div>
       </div>
 
+      <!-- Textarea -->
+      <div class="mb-3">
+        <label for="bio" class="form-label">Bio</label>
+        <textarea class="form-control" id="bio" rows="3" placeholder="Tell us about yourself..."></textarea>
+      </div>
+
+      <!-- File Input -->
+      <div class="mb-3">
+        <label for="formFile" class="form-label">Upload Profile Picture</label>
+        <input class="form-control" type="file" id="formFile">
+      </div>
+
       <!-- Submit Button -->
-      <button class="btn btn-primary" type="submit">Login</button>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
 
@@ -56,7 +113,7 @@
       });
     })();
   </script>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
